docs: add readme with .NET 10 secrets instructions

--- a/BlazorTest.csproj
+++ b/BlazorTest.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
+    <UserSecretsId>ca6def51-ebd9-4e84-b1a6-fd916bc76054</UserSecretsId>
   </PropertyGroup>
 
 </Project>
